--- a/demo/Demo.RazorComponents/Components/Pages/Index.razor
+++ b/demo/Demo.RazorComponents/Components/Pages/Index.razor
@@ -1,9 +1,9 @@
 ﻿@page "/"
 
 <div class="demo-description">
-    <h2>Razor Component Suite</h2>
+    <h2>DevExpress UI for Razor Components</h2>
     <p>
-        This demo application is a preview of the DevExpress UI Suite for Razor Components.
+        Overview – Our Newest Components for Razor Components.
     </p>
     <p>
         The DevExpress UI components featured in this demo are available for free download and can be used in your next Razor Components/Blazor app.*
