--- a/demo/Demo.RazorComponents/Components/Pages/GridLargeDataBase.razor
+++ b/demo/Demo.RazorComponents/Components/Pages/GridLargeDataBase.razor
@@ -21,7 +21,7 @@
     <div class="online-only-warrning card">
         <img src="images/Information.svg" alt="Information" />
         <p class="info-caption">To try this demo, please navigate to the <a href="https://demos.devexpress.com/razor-components/GridLargeDataBase">online demo page</a>.</p>
-        <p class="info-descrition">This demo is only accessible online because it uses a large data source that is hosted on a DevExpress internal database server.</p>
+        <p class="info-description">This demo is only accessible online because it uses a large data source that is hosted on a DevExpress internal database server.</p>
     </div>
     <div class="card demo-card-wide">
         <div class="card-footer text-muted" style="border-top: none">
