Improve demo descriptions

--- a/demo/Demo.RazorComponents/Components/Pages/GridColumnTypes.razor
+++ b/demo/Demo.RazorComponents/Components/Pages/GridColumnTypes.razor
@@ -6,7 +6,7 @@
     <h2>Data Grid - Column Types</h2>
 
     <p>
-        This demo demonstrates different column types supported by the DevExpress Data Grid for Razor Components.
+        This demo demonstrates the different column types supported by the DevExpress Data Grid for Razor Components.
     </p>
     <ul>
         <li>
@@ -14,11 +14,11 @@
             <p>Displays data management commands such as New, Edit, Delete, Update, and so on.</p>
         </li>
         <li>
-            <b>DxDataGridColumn (Temp. C)</b>
+            <b>DxDataGridColumn (Temp. (C))</b>
             <p>Default column type that displays strings and uses a text box to edit values.</p>
         </li>
         <li>
-            <b>DxDataGridSpinEditColumn (Temp. F)</b>
+            <b>DxDataGridSpinEditColumn (Temp. (F))</b>
             <p>Uses a spin editor with up/down buttons to edit column values.</p>
         </li>
         <li>
