--- a/demo/Demo.RazorComponents/Components/Pages/GridTemplate.razor
+++ b/demo/Demo.RazorComponents/Components/Pages/GridTemplate.razor
@@ -18,7 +18,7 @@
         </li>
     </ul>  
     <p>
-        Review how values in Availability and Category columns are formatted and try the Edit action to see custom editors integrated into the edit form.
+        Review how values in the Availability and Category columns are formatted and try the Edit action to see the custom editors integrated into the edit form.
     </p>
 </div>
 
