--- a/demo/Demo.RazorComponents/Components/Pages/PivotGridLargeDataBase.razor
+++ b/demo/Demo.RazorComponents/Components/Pages/PivotGridLargeDataBase.razor
@@ -8,10 +8,10 @@
 <div class="demo-description">
     <h2>Pivot Grid - Large Data Source</h2>
     <p>
-        This demo illustrates Pivot Grid control’s performance when bound to a dataset that contains a million rows. Try to navigate between pages and sort data to experience the control’s responsiveness. The pager is enabled by setting the Pivot Grid’s ShowPager and PageSize properties.
+        This demo shows the performance of the Pivot Grid when it is bound to a dataset that contains a million rows. Experiment with navigating between the pages and sorting the data to experience the responsiveness of the pivot grid in this situation. The pager is enabled by setting the Pivot Grid's ShowPager and PageSize properties.
     </p>
     <p>
-        In this example, Entity Framework Core (version 3.0) provides DxDataGrid with an IQueryable<T> source.
+        In this example, Entity Framework Core (version 3.0) provides the Pivot Grid with an IQueryable&lt;T&gt; source.
     </p>
 </div>
 @if (!DemoConfiguration.Value.SiteMode)
