--- a/demo/Demo.RazorComponents/Components/Pages/Editors.razor
+++ b/demo/Demo.RazorComponents/Components/Pages/Editors.razor
@@ -8,7 +8,9 @@
         The Combo Box component is a drop-down list editor that allows an end user to select from a list of items.
     </p>
     <p>
-        This sample demonstrates the Combo Box bound to a list of complex business objects. The text displayed in list items is retrieved from the specified business object property. Try to change the selection to view the current object’s property values.
+        This sample demonstrates the Combo Box bound to a list of complex business objects.
+        The text for the items displayed in the list is retrieved from the specified business object property.
+        Try changing the selection to see the current object's property values.
     </p>
 </div>
 
@@ -29,7 +31,7 @@
 <div class="demo-description">
     <h2>Combo Box – Cascading Lists</h2>
     <p>
-        This demo shows how to populate a DxComboBox editor with items based on user selection made in another DxComboBox.
+        This demo shows how to populate a DxComboBox editor with items based on the user selection from another DxComboBox.
     </p>
 </div>
 
@@ -78,11 +80,12 @@
 <div class="demo-description">
     <h2>Spin Edit – Decimal Value Type</h2>
     <p>
-        DxSpinEdit displays a numeric values and allows users to modify them by typing into the text box or by using the up/down spin buttons.
+        DxSpinEdit displays a numeric value and allows the user to modify it, either by typing a new value into the text box, or by using the up/down spin buttons to increment/decrement the value.
     </p>
     <p>
-        DxSpinEdit works with .NET built-in data types, including System.Decimal the most precise of any other .NET floating point types.
-        The editor processes values directly on the server side, without relying on JavaScript types. This ensures that specified values never lose precision because of type conversions.
+        DxSpinEdit works with .NET built-in data types, including System.Decimal. 
+        The editor processes values directly on the server side, without changing to or from JavaScript number types. 
+        This ensures that values entered by the user never lose precision because of possible type conversions.
     </p>
 </div>
 
