--- a/demo/Demo.RazorComponents/Components/Pages/Index.razor
+++ b/demo/Demo.RazorComponents/Components/Pages/Index.razor
@@ -10,14 +10,16 @@
         Review our <a href="https://github.com/DevExpress/RazorComponents">GitHub Guide</a> for details on how to set up your environment.
     </p>
 
-    <i>* Like any software preview, the DevExpress UI Suite for Razor Components is not without fault. You should not use these products in production environments or in mission-critical applications.</i>
+    <p>
+        <i>* Like any software preview, the DevExpress UI Suite for Razor Components is not without fault. You should not use these products in production environments or in mission-critical applications.</i>
+    </p>
 
     <h2>How to run this demo on your machine</h2>
     <ol>
         <li>Ensure that you have .NET Core 3 installed.</li>
         <li>Download the "<b>demo</b>" directory from the <a href="https://github.com/DevExpress/RazorComponents">GitHub repository</a>.</li>
         <li>Open <b>demo/Demo.RazorComponents.sln</b> in Visual Studio 2019.</li>
-        <li>Start the application</li>
+        <li>Start the application.</li>
     </ol>
     See also:
     <ul style="list-style-type: none;padding:0;">
@@ -36,7 +38,7 @@
 <CodeSnippet>https://nuget.devexpress.com/early-access/api</CodeSnippet>
             <p>See the <a href="https://docs.devexpress.com/GeneralInformation/116698/installation/install-devexpress-controls-using-nuget-packages/setup-visual-studio%27s-nuget-package-manager" rel="nofollow">Setup Visual Studio's NuGet Package Manager</a> topic for more information.</p>
         </li>
-        <li>Obtain the client runtime from our <a href="https://github.com/DevExpress/RazorComponents">GitHub repository</a> - download all files from the "<b>static-files</b>" directory. Include the downloaded files into your start page.</li>
+        <li>Obtain the client runtime from our <a href="https://github.com/DevExpress/RazorComponents">GitHub repository</a> - download all files from the "<b>client-runtime</b>" directory. Include the downloaded files into your start page.</li>
         <li>
             Register our tag namespace and helper in <b>/Components/_ViewImports.cshtml</b>: 
             <CodeSnippet>
