--- a/demo/Demo.RazorComponents/Components/Pages/Pager.razor
+++ b/demo/Demo.RazorComponents/Components/Pages/Pager.razor
@@ -4,18 +4,18 @@
 <div class="demo-description">
     <h2>Pager - Overview</h2>
     <p>
-        The Pager is a standalone UI component that enables you to enable data navigation and to visualize the current position within a bound data source.
+        The Pager is a standalone UI component that enables data navigation and helps visualize the current position within a bound data source.
     </p>
     <p>
         You can specify the following attributes:
     </p>
     <ul>
-        <li><b>PageCount</b> - Total page count</li>
-        <li><b>ActivePageIndex</b> - Active page index </li>
+        <li><b>PageCount</b> - Total number of pages</li>
+        <li><b>ActivePageIndex</b> - Index of the active page</li>
         <li><b>CollapseButtonCount</b> - Maximum number of page numbers displayed simultaneously</li>
     </ul>
     <p>
-        If the total number of pages is greater than the CollapseButtonCount value, the pager hides part of page number buttons and displays an ellipsis in their place.
+        If the total number of pages is greater than the CollapseButtonCount value, the pager hides some of the page number buttons and displays an ellipsis in their place.
     </p>
     <p>
         Try the demo below – use the pager control or linked Spin Editor controls and notice the two-way synchronization.
