--- a/demo/Demo.RazorComponents/Components/Pages/PivotGrid.razor
+++ b/demo/Demo.RazorComponents/Components/Pages/PivotGrid.razor
@@ -25,7 +25,7 @@
         </li>
     </ul>
     <p>
-        Try to expand and collapse row/column values to reveal a more detailed view or return to a big picture, respectively. Click headers, such as Region or Year, to change the order of values. Note the automatically calculated section sub-totals and grand totals.  
+        Try expanding row/column values to reveal a more detailed view or collapsing them to return to the overall picture, respectively. Click headers, such as Region or Year, to change the order of values. Note the automatically calculated section sub-totals and grand totals.  
     </p>
 </div>
 
