--- a/demo/Demo.RazorComponents/Components/Pages/Index.razor
+++ b/demo/Demo.RazorComponents/Components/Pages/Index.razor
@@ -1,7 +1,7 @@
 ﻿@page "/"
 
 <div class="demo-description">
-    <h2>DevExpress UI for Razor Components</h2>
+    <h2>DevExpress UI for Blazor / Razor Components</h2>
     <p>
         Overview – Our Newest Components for Razor Components.
     </p>
