--- a/demo/Demo.RazorComponents/Components/Shared/MainLayout.razor
+++ b/demo/Demo.RazorComponents/Components/Shared/MainLayout.razor
@@ -7,7 +7,7 @@
 <div class="main">
     <div class="top-row px-4" id="navbar">
         <div class="logo">
-            <h5 class="caption">Online Demos - DevExpress UI for Razor Components</h5>
+            <h5 class="caption">Online Demos - DevExpress UI for Blazor / Razor Components</h5>
         </div>
     </div>
 
