--- a/demo/Demo.RazorComponents/Components/Shared/SocialButtonPanel.razor
+++ b/demo/Demo.RazorComponents/Components/Shared/SocialButtonPanel.razor
@@ -2,7 +2,7 @@
 
 <div class="social-panel">
     <div>
-        <div class="sp-caption">Help spread the word – DevExpress UI for Razor Components is available for free.</div>
+        <div class="sp-caption">Help spread the word – DevExpress UI for Blazor / Razor Components is available for free.</div>
         <div class="fb-share-button"
              data-href="https://dxpr.es/2WogLq7"
              data-layout="button"
@@ -11,7 +11,7 @@
 
         <a class="twitter-share-button"
            href="https://twitter.com/intent/tweet"
-           data-text="Free DevExpress UI for Razor Components ships with 7 user interface components including a Data Grid and Pivot Grid."
+           data-text="Free DevExpress UI for Blazor / Razor Components ships with 7 user interface components including a Data Grid and Pivot Grid."
            data-url="https://dxpr.es/2WogLq7"
            data-size="small"
            data-hashtags="RazorComponents, Blazor, monowasm, DevExpress"
