--- a/demo/Demo.RazorComponents/Components/Shared/NavMenu.razor
+++ b/demo/Demo.RazorComponents/Components/Shared/NavMenu.razor
@@ -24,7 +24,7 @@
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="GridLargeDataBase">
-                <img class="demo-icon" src="images/GridLargeData.svg" alt="Grid - Large Data" aria-hidden="true"> Grid - Large Data
+                <img class="demo-icon" src="images/GridLargeData.svg" alt="Grid - Large Data" aria-hidden="true"> Grid - Large Data Source
             </NavLink>
         </li>
         <li class="nav-item px-3">
@@ -39,7 +39,7 @@
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="PivotGridLargeDataBase">
-                <img class="demo-icon" src="images/PivotGridLargeData.svg" alt="Pivot Grid - Large Data" aria-hidden="true"> Pivot Grid - Large Data
+                <img class="demo-icon" src="images/PivotGridLargeData.svg" alt="Pivot Grid - Large Data" aria-hidden="true"> Pivot Grid - Large Data Source
             </NavLink>
         </li>
         <li class="nav-item px-3">
