--- a/demo/Demo.RazorComponents/Components/code-snippets/CodeSnippet-GridLargeDataBase.razor
+++ b/demo/Demo.RazorComponents/Components/code-snippets/CodeSnippet-GridLargeDataBase.razor
@@ -4,17 +4,17 @@
     <DxDataGridColumn Field=@nameof(AreaRentInfo.Area)></DxDataGridColumn>
     <DxDataGridColumn Field=@nameof(AreaRentInfo.City) Caption=""County""></DxDataGridColumn>
     <DxDataGridColumn Field=@nameof(AreaRentInfo.Name) Caption=""Location""></DxDataGridColumn>
-    <DxDataGridColumn Field=@nameof(AreaRentInfo.Year)></DxDataGridColumn>
-    <DxDataGridColumn Field=@nameof(AreaRentInfo.Bedrooms)></DxDataGridColumn>
-    <DxDataGridColumn Field=@nameof(AreaRentInfo.Rent)>
+    <DxDataGridSpinEditColumn Field=@nameof(AreaRentInfo.Year)></DxDataGridSpinEditColumn>
+    <DxDataGridSpinEditColumn Field=@nameof(AreaRentInfo.Bedrooms)></DxDataGridSpinEditColumn>
+    <DxDataGridSpinEditColumn Field=@nameof(AreaRentInfo.Rent)>
         <DisplayTemplate>
             @(((context as AreaRentInfo).Rent).ToString(""C2""))
         </DisplayTemplate>
-    </DxDataGridColumn>
-    <DxDataGridColumn Field=@nameof(AreaRentInfo.Population)>
+    </DxDataGridSpinEditColumn>
+    <DxDataGridSpinEditColumn Field=@nameof(AreaRentInfo.Population)>
         <DisplayTemplate>
             @(((context as AreaRentInfo).Population).ToString(""#,0""))
         </DisplayTemplate>
-    </DxDataGridColumn>
+    </DxDataGridSpinEditColumn>
 </DxDataGrid>")
 </CodeSnippet>
