--- a/demo/Demo.RazorComponents/Pages/Index.cshtml
+++ b/demo/Demo.RazorComponents/Pages/Index.cshtml
@@ -3,7 +3,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Razor Components powered by DevExpress - Demos</title>
     <base href="~/" />
     <environment include="Development">
