--- a/demo/BlazorDemo.ServerSide/BlazorDemo.ServerSide/Pages/Index.razor
+++ b/demo/BlazorDemo.ServerSide/BlazorDemo.ServerSide/Pages/Index.razor
@@ -54,6 +54,8 @@
             <ul>
                 <li><NavLink href="GridColumnTypes">Column Types</NavLink></li>
                 <li><NavLink href="GridTemplate">Templates</NavLink></li>
+                <li><NavLink href="GridCascadingEditors">Cascading Editors</NavLink></li>
+                <li><NavLink href="GridEditFormTemplateValidation">Edit Form Template Validation</NavLink></li>
                 <li><NavLink href="GridLargeDataBase">Large Datasets</NavLink></li>
             </ul>
         </li>
