--- a/demo/BlazorDemo.ServerSide/BlazorDemo.ServerSide/Shared/NavMenu.razor
+++ b/demo/BlazorDemo.ServerSide/BlazorDemo.ServerSide/Shared/NavMenu.razor
@@ -17,6 +17,18 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
+            <NavLink class="nav-link" href="GridCascadingEditors">
+                <img class="demo-icon" src="images/GridCascadingEditors.svg" alt="Grid - Column Types" aria-hidden="true"><span>Grid - Cascading Editors</span>
+                <badge_new />
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="GridEditFormTemplateValidation">
+                <img class="demo-icon" src="images/GridEditFormTemplate.svg" alt="Grid - Column Types" aria-hidden="true"><span>Grid - Edit Form Validation</span>
+                <badge_new />
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
             <NavLink class="nav-link" href="GridLargeDataBase">
                 <img class="demo-icon" src="images/GridLargeData.svg" alt="Grid - Large Data" aria-hidden="true"><span>Grid - Large Data Source</span>
             </NavLink>
@@ -44,7 +56,6 @@
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="FormValidation">
                 <img class="demo-icon" src="images/GridColumnType.svg" alt="Grid - Column Types" aria-hidden="true"><span>Form Validation</span>
-                <badge_new />
             </NavLink>
         </li>
         <li class="nav-item px-3">
@@ -55,7 +66,6 @@
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="Editors">
                 <img class="demo-icon" src="images/Editors.svg" alt="Editors" aria-hidden="true"><span>Editors</span>
-                <badge_upd />
             </NavLink>
         </li>
         <li class="nav-item px-3">
