--- a/demo/BlazorDemo.ServerSide/BlazorDemo.ServerSide/wwwroot/css/site.css
+++ b/demo/BlazorDemo.ServerSide/BlazorDemo.ServerSide/wwwroot/css/site.css
@@ -138,7 +138,7 @@ app {
 
     .main > div {
         padding-left: 2rem !important;
-        padding-right: 0 !important;
+        padding-right: 2rem !important;
     }
 
     .navbar-toggler {
