--- a/demo/BlazorDemo.ServerSide/BlazorDemo.ServerSide/wwwroot/css/dx-demo.css
+++ b/demo/BlazorDemo.ServerSide/BlazorDemo.ServerSide/wwwroot/css/dx-demo.css
@@ -69,6 +69,7 @@ code.hljs.xml {
 
     .main .top-row {
         z-index: 10000;
+        padding-right:0!important;
     }
 
 .sidebar > .logo-container {
