--- a/demo/BlazorDemo.ServerSide/BlazorDemo.ServerSide/Pages/CodeSnippets/CodeSnippet-GridTemplate.razor
+++ b/demo/BlazorDemo.ServerSide/BlazorDemo.ServerSide/Pages/CodeSnippets/CodeSnippet-GridTemplate.razor
@@ -55,7 +55,7 @@
                 <DxDataGridColumn Field=@nameof(ProductCategory.ProductSubcategoryID) Width=""150px""></DxDataGridColumn>
                 <DxDataGridColumn Field=@nameof(ProductCategory.Category) Width=""150px""></DxDataGridColumn>
                 <DxDataGridColumn Field=@nameof(ProductCategory.Subcategory) Width=""150px""></DxDataGridColumn>
-                <DxDataGridColumn Field=@nameof(ProductCategory.LastUpdatedDate) Width=""150px></DxDataGridColumn>
+                <DxDataGridColumn Field=@nameof(ProductCategory.LastUpdatedDate) Width=""150px""></DxDataGridColumn>
             </DxDataGrid>
         </EditTemplate>
     </DxDataGridColumn>
