--- a/demo/BlazorDemo.ServerSide/BlazorDemo.ServerSide/_Imports.razor
+++ b/demo/BlazorDemo.ServerSide/BlazorDemo.ServerSide/_Imports.razor
@@ -1,6 +1,5 @@
 @using System.Net.Http
 @using Microsoft.AspNetCore.Components.Forms
-@using Microsoft.AspNetCore.Components.Layouts
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.Extensions.Options
 @using Microsoft.JSInterop
@@ -9,6 +8,7 @@
 @using Demo.Blazor
 @using BlazorDemo.ServerSide.Shared
 @using BlazorDemo.ServerSide.Pages.CodeSnippets
+@using BlazorDemo.ServerSide.Pages.CodeSnippets.Charts
 @using BlazorDemo.ServerSide.Pages.CaseViews
 @*#endregion*@
 
